Fix tab overflow

--- a/app/components/primer/alpha/tab_nav.pcss
+++ b/app/components/primer/alpha/tab_nav.pcss
@@ -71,10 +71,6 @@
   }
 }
 
-tab-container .tabnav-tab {
-  margin-bottom: -1px;
-}
-
 
 /* Tabnav extras
 **
